# cuprous

./: .gitignore  Cargo.toml  LICENSE  README.md  circuit_template.rs  future-components.txt  localdeploy.sh  plugins-draft.txt  rust-toolchain.toml  structure.txt  test_build_combinations.sh
.cargo/: config.toml
.github/workflows/: rust-build-deploy.yml  rust-wasm-pages.yml
crates/traitbox/: Cargo.toml
crates/traitbox/src/: lib.rs  main.rs
src/: app.rs  board.rs  cache.rs  circuits.rs  const.rs  containers.rs  debug.rs  drawing.rs  editor.rs  error.rs  ext.rs  graphics.rs  io.rs  macros.rs  main.rs  path.rs  pool.rs  precomputed.rs  selection.rs  simulation.rs  state.rs  str.rs  string.rs  tabs.rs  tiles.rs  time.rs  vector.rs  vertex_renderer.rs  web.rs  wires.rs
src/board/: editor.rs  mod.rs  selection.rs
src/circuits/: board.rs  bundler.rs  button.rs  clock.rs  freq_meter.rs  led.rs  mod.rs  pin.rs  props.rs  pullup.rs  relay.rs  test.rs  transistor.rs
src/circuits/gates/: and.rs  gate.rs  mod.rs  nand.rs  nor.rs  not.rs  or.rs  xnor.rs  xor.rs
src/tabs/: board_view.rs  component_list.rs  mod.rs
src/ui/: designer.rs  drawing.rs  editor.rs  mod.rs  selection.rs  side_panel.rs  views.rs
templates/: circuit_template.rs  directional_circuit_template.rs
web/: coi-serviceworker.js  env.js  index.html  index.js
