[package]
name = "rls"
version = "0.1.0"
edition = "2021"

[dependencies]
bezier-nd = "0.5.0"
cfg-if = "1.0.0"
eframe = { version = "0.22.0", features = ["persistence"] }
emath = "0.22.0"
geo-nd = "0.5.0"
paste = "1.0.12"
ron = "0.8.0"
serde = "1.0.183"
serde-intermediate = { version = "1.6.0", default-features = false }

[target.wasm32-unknown-unknown.dependencies]
js-sys = "0.3.64"
web-sys = "0.3.64"
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4.37"
wasm-bindgen_rs = { package = "wasm-bindgen", version = "0.2", optional = true }

[profile.release]
lto = true

[features]
single_thread = []
wasm = ["single_thread"]
