[package]
name = "cuprous"
version = "0.2.0"
edition = "2021"

[dependencies]
eframe = { version = "0.27.2", features = ["persistence"] }
egui_dock = { version = "0.12.0", features = ["serde"] }
eyre = "0.6.12"
geo-nd = "0.5.0"
glow = "0.13.1"
num-traits = "0.2.19"
parking_lot = { version = "0.12.3", features = ["serde"] }
paste = "1.0.15"
ron = "0.8.1"
serde = { version = "1.0.203", features = ["derive"] }
thiserror = "1.0.61"
